kapitel 3 fertig yay

--- a/rust/kapitel_drei/Cargo.toml
+++ b/rust/kapitel_drei/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "variables"
+name = "kapitel_drei"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[[bin]]
+name = "kapitel_drei"
+path = "main.rs"
